[metadata]
name = cianparser
version = 1.0.4
description = Parser information from Cian website
url = https://github.com/lenarsaitov/cianparser
author = Lenar Saitov
author_email = lenarsaitov1@yandex.ru
long_description = file: README.md
license_file = MIT
keywords = python parser requests cloudscraper beautifulsoup cian realstate